# blackbird

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  StrawberryFieldsListener.py  blackbird.g4  blackbirdListener.py  example.xbb  example_coherent.xbb  requirements.txt  setup.py  strawberry_fields_listener.py
.github/: CHANGELOG.md
.github/workflows/: tests.yaml
antlr4_blackbird/: blackbirdParser.py
apps/: CMakeLists.txt  GaussianSimulator.cpp  GaussianSimulator.h  print_blackbird.cpp  strawberry_fields_listener.py
blackbird_cpp/: Blackbird.h  BlackbirdProgram.h  BlackbirdVariables.h  CMakeLists.txt  Operations.h  Program.h  Visitor.cpp  Visitor.h  blackbird.interp  blackbird.pc.in  blackbird.tokens  blackbirdBaseListener.cpp  blackbirdBaseListener.h  blackbirdBaseVisitor.cpp  blackbirdBaseVisitor.h  blackbirdLexer.cpp  blackbirdLexer.h  blackbirdLexer.interp  blackbirdListener.cpp  blackbirdListener.h  blackbirdParser.cpp  blackbirdParser.h  blackbirdVisitor.cpp  blackbirdVisitor.h  main.cpp  main_antlr.cpp
blackbird_cpp_examples/: CMakeLists.txt  print_blackbird.cpp
blackbird_python/: blackbird.interp  blackbird.py  blackbird.tokens  blackbirdLexer.interp  blackbirdLexer.py  blackbirdListener.py  blackbirdParser.py
blackbird_python/blackbird/: __init__.py  _version.py  auxiliary.py  blackbird.interp  blackbird.py  blackbird.tokens  blackbirdLexer.interp  blackbirdLexer.py  blackbirdLexer.tokens  blackbirdListener.py  blackbirdParser.py  error.py  listener.py  program.py  utils.py
blackbird_python/blackbird/tests/: test_auxiliary.py  test_listener.py  test_load_dump.py  test_program.py  test_utils.py
cpp_examples/: CMakeLists.txt  chip0_simulator.cpp  print_blackbird.cpp
doc/: conf.py  index.rst  installing.rst  references.bib  requirements.txt  research.rst  syntax.rst  zreferences.rst
doc/apps/: chip0_simulator.rst  sf.rst
doc/blackbird_cpp/: installing.rst  overview.rst
doc/blackbird_python/: auxiliary.rst  error.rst  example.rst  init.rst  installing.rst  listener.rst  program.rst  utils.rst
doc/xanadu_theme/: layout.html  searchbox.html
doc/xanadu_theme/static/: xanadu.css_t
examples/: coherent_sampling.xbb  example.xbb  example_chip0.xbb  example_coherent.xbb  example_gbs.xbb  example_include.xbb  state_teleportation.xbb
src/: blackbird.g4
